--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "contextualduplicate",
     "displayName": "Contextual Duplicate",
     "description": "This extension duplicates text based on the context. If text is selected, only the selected text will be duplicated. Otherwise, the complete line will be duplicated.",
-    "version": "0.0.1",
-    "publisher": "Lars Fernhomberg",
+    "version": "0.1.0",
+    "publisher": "lafe",
+    "author": "Lars Fernhomberg",
     "homepage": "https://github.com/lafe/ContextualDuplicate",
     "engines": {
         "vscode": "^1.0.0"
@@ -11,7 +12,7 @@
     "categories": [
         "Other"
     ],
-    "license":"Apache-2.0",
+    "license": "Apache-2.0",
     "repository": {
         "type": "GitHub",
         "url": "https://github.com/lafe/ContextualDuplicate.git"
@@ -21,14 +22,18 @@
     ],
     "main": "./out/src/extension",
     "contributes": {
-        "commands": [{
-            "command": "lafe.duplicateCode",
-            "title": "Duplicate code"
-        }],
-        "keybindings": [{
-            "command": "lafe.duplicateCode",
-            "key": "ctrl+k d"
-        }]
+        "commands": [
+            {
+                "command": "lafe.duplicateCode",
+                "title": "Duplicate code"
+            }
+        ],
+        "keybindings": [
+            {
+                "command": "lafe.duplicateCode",
+                "key": "ctrl+k d"
+            }
+        ]
     },
     "scripts": {
         "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
