Added Github Issues list as Support-list

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "contextualduplicate",
     "displayName": "Contextual Duplicate",
     "description": "This extension duplicates text based on the context. If text is selected, only the selected text will be duplicated. Otherwise, the complete line will be duplicated.",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "publisher": "lafe",
     "author": "Lars Fernhomberg",
     "homepage": "https://github.com/lafe/ContextualDuplicate",
@@ -16,6 +16,9 @@
     "repository": {
         "type": "GitHub",
         "url": "https://github.com/lafe/ContextualDuplicate.git"
+    },
+    "bugs": {
+        "url": "https://github.com/lafe/ContextualDuplicate/issues"
     },
     "activationEvents": [
         "onCommand:lafe.duplicateCode"
