--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-    "name": "contextualduplicate",
-    "displayName": "Contextual Duplicate",
-    "description": "This extension duplicates text based on the context. If text is selected, only the selected text will be duplicated. Otherwise, the complete line will be duplicated.",
-    "version": "0.2.0",
-    "publisher": "lafe",
-    "author": "Lars Fernhomberg",
-    "homepage": "https://github.com/lafe/ContextualDuplicate",
-    "engines": {
-        "vscode": "^1.0.0"
-    },
-    "categories": [
-        "Other"
-    ],
-    "license": "Apache-2.0",
-    "repository": {
-        "type": "GitHub",
-        "url": "https://github.com/lafe/ContextualDuplicate.git"
-    },
-    "bugs": {
-        "url": "https://github.com/lafe/ContextualDuplicate/issues"
-    },
-    "activationEvents": [
-        "onCommand:lafe.duplicateCode"
-    ],
-    "main": "./out/src/extension",
-    "contributes": {
-        "commands": [
-            {
-                "command": "lafe.duplicateCode",
-                "title": "Duplicate code"
-            }
-        ],
-        "keybindings": [
-            {
-                "command": "lafe.duplicateCode",
-                "key": "ctrl+k d"
-            }
-        ]
-    },
-    "scripts": {
-        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
-        "compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install"
-    },
-    "devDependencies": {
-        "typescript": "^1.8.5",
-        "vscode": "^0.11.0"
-    },
-    "icon": "icon/icon.png"
+  "name": "contextualduplicate",
+  "displayName": "Contextual Duplicate",
+  "description": "This extension duplicates text based on the context. If text is selected, only the selected text will be duplicated. Otherwise, the complete line will be duplicated.",
+  "version": "0.2.0",
+  "publisher": "lafe",
+  "author": "Lars Fernhomberg",
+  "homepage": "https://github.com/lafe/ContextualDuplicate",
+  "engines": {
+    "vscode": "^1.5.0"
+  },
+  "categories": [
+    "Other"
+  ],
+  "license": "Apache-2.0",
+  "repository": {
+    "type": "GitHub",
+    "url": "https://github.com/lafe/ContextualDuplicate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lafe/ContextualDuplicate/issues"
+  },
+  "activationEvents": [
+    "onCommand:lafe.duplicateCode"
+  ],
+  "main": "./out/src/extension",
+  "contributes": {
+    "commands": [{
+      "command": "lafe.duplicateCode",
+      "title": "Duplicate code"
+    }],
+    "keybindings": [{
+      "command": "lafe.duplicateCode",
+      "key": "ctrl+k d"
+    }]
+  },
+  "scripts": {
+    "vscode:prepublish": "tsc -p ./",
+    "compile": "tsc -watch -p ./",
+    "postinstall": "node ./node_modules/vscode/bin/install",
+    "test": "node ./node_modules/vscode/bin/test"
+  },
+  "devDependencies": {
+    "typescript": "^2.0.3",
+    "vscode": "^1.0.0",
+    "mocha": "^2.3.3",
+    "@types/node": "^6.0.40",
+    "@types/mocha": "^2.2.32"
+  },
+  "icon": "icon/icon.png"
 }
